update luong phe duyet va form employee

--- a/hrm/views/hr_department_view.xml
+++ b/hrm/views/hr_department_view.xml
@@ -14,7 +14,6 @@
                 <!-- Define the search panel to group the tree view -->
                 <searchpanel>
                     <!-- Group the tree view by 'Manager' field -->
-                    <field name="company_id" groups="base.group_multi_company" icon="fa-building" enable_counters="1"/>
                     <field name="parent_id" string="Cấu hình công ty" icon="fa-users" />
                 </searchpanel>
             </search>
@@ -29,7 +28,7 @@
                 <sheet>
                     <group>
                         <field name="type_block" attrs="{'readonly': [('readonly_type_block', '=', True)]}" required="1"/>
-                        <field name="type_in_block_ecom" attrs="{'invisible': [('type_block', '!=', 'BLOCK_COMMERCE_NAME')]}" required="1"/>
+                        <field name="type_in_block_ecom" attrs="{'invisible': [('type_block', '!=', 'BLOCK_COMMERCE_NAME')], 'required': [('type_block', '=', 'BLOCK_COMMERCE_NAME')]}"/>
                     </group>
                     <group col="2">
                         <group>
@@ -46,7 +45,7 @@
                         </group>
                         <group>
                             <field name="phone_num"/>
-                            <field name="manager_id" string="Quản lý" attrs="{'invisible': [('type_block', '!=', 'BLOCK_OFFICE_NAME')], 'required': [('type_block', '=', 'BLOCK_OFFICE_NAME')]}"/>
+                            <field name="manager_id" string="Quản lý" attrs="{'invisible': [('type_block', '!=', 'BLOCK_OFFICE_NAME')]}"/>
                             <field name="chairperson" string="Chủ hộ" attrs="{'invisible': [('type_block', '!=', 'BLOCK_COMMERCE_NAME')]}"/>
                             <field name="vice_president" string="Phó hộ" attrs="{'invisible': [('type_block', '!=', 'BLOCK_COMMERCE_NAME')]}"/>
                         </group>
@@ -76,9 +75,9 @@
         <field name="res_model">hr.department</field>
         <!--        <field name="search_view_id" ref="departments_filter"/>-->
         <field name="view_mode">tree,form</field>
-<!--        <field name="view_ids" eval="[(5, 0, 0),-->
-<!--                (0, 0, {'view_mode': 'tree', 'view_id': ref('view_departments_tree')}),-->
-<!--                (0, 0, {'view_mode': 'form', 'view_id': ref('view_departments_form')})]"/>-->
+        <field name="view_ids" eval="[(5, 0, 0),
+                (0, 0, {'view_mode': 'tree', 'view_id': ref('view_departments_tree')}),
+                (0, 0, {'view_mode': 'form', 'view_id': ref('view_departments_form')})]"/>
         <field name="search_view_id" ref="view_department_search_tree"/>
 
     </record>
