--- a/hrm_tinh_luong/views/datn_trocap_phucap.xml
+++ b/hrm_tinh_luong/views/datn_trocap_phucap.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <record id="datn_cong_tang_cuong_tree" model="ir.ui.view">
-            <field name="name">Quản lý lễ tết</field>
-            <field name="model">datn.cong.tang.cuong</field>
+        <record id="datn_trocap_phucap_tree" model="ir.ui.view">
+            <field name="name">Quản trợ cấp, phụ cấp</field>
+            <field name="model">datn.trocap.phucap</field>
             <field name="arch" type="xml">
                 <tree class="widget-department-tree"
                       decoration-info="state=='draft'"
-                      default_order="department_id">
+                      default_order="ngay_chi_tra desc">
                     <field name="name"/>
                     <field name="department_id" widget="many2many_tags"/>
+                    <field name="muc_huong_chung"/>
+                    <field name="ngay_chi_tra"/>
                     <field name="ngay_tao"/>
-                    <field name="year"/>
                     <field name="state"/>
                 </tree>
             </field>
         </record>
 
-        <record id="datn_cong_tang_cuong_form" model="ir.ui.view">
-            <field name="name">Quản lý công tăng cường</field>
-            <field name="model">datn.cong.tang.cuong</field>
+        <record id="datn_trocap_phucap_form" model="ir.ui.view">
+            <field name="name">Quản lý trợ cấp, phụ cấp</field>
+            <field name="model">datn.trocap.phucap</field>
             <field name="arch" type="xml">
                 <form>
                     <header>
@@ -27,8 +28,7 @@
                                 class="oe_highlight"/>
                         <button string="Soạn thảo" name="action_draft" type="object"
                                 states="confirmed"/>
-                        <button string="Tải dữ liệu" attrs="{'invisible': [('state','=','confirmed')]}"
-                                name="action_loaddata" type="object" class="oe_highlight oe_edit_only"/>
+                        <button string="Tải dữ liệu" name="action_loaddata" type="object" class="oe_highlight oe_edit_only" attrs="{'invisible': [('state', '!=', 'draft')]}" />
                         <field name="state" widget="statusbar"/>
                     </header>
                     <group>
@@ -39,9 +39,8 @@
                             <field string="Đơn vị/ phòng ban" name="department_id" widget="many2many_tags" required="1"
                                options="{'no_quick_create': 1, 'no_create_edit': 1, 'no_open': 1, 'no_create': 1}" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
                         </group>
-                        <group class="cong_them">
-                                <field name="cong_them" required="1" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
-                                <field name="year" required="1" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
+                        <group class="date_letet">
+                                <field name="ngay_chi_tra" class="date1 oe_inline" required="1" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
                         </group>
                     </group>
                     <group>
@@ -68,20 +67,22 @@
                                    attrs="{'invisible': [('id','=',False)]}"
                                    style="max-width: 200px;" readonly="1" force_save="1"/>
                         </group>
+                        <group>
+                            <field name="muc_huong_chung" required="1" attrs="{'readonly': ['|', ('state', '!=', 'draft'), ('is_import', '!=', False)]}"/>
+                        </group>
                     </group>
                     <notebook>
-                        <page string="Danh sách nhân sự hưởng công tăng cường" name="data_timesheet">
-                            <field name="item_ids" widget="one2many_list" attrs="{'readonly': [('state', '!=', 'draft')]}">
+                        <page string="Danh sách nhân sự hưởng trợ cấp phụ cấp" name="data_timesheet">
+                            <field name="item_ids"
+                                   widget="one2many_list" attrs="{'readonly': [('state', '!=', 'draft')]}">
                                 <tree editable="bottom" create="true" open="false"
                                       class="color_tree_row"
                                       tableFixer="left" fixColumn="2"
                                       default_order="employee_id ASC" limit="100">
                                     <field name="employee_id" required="1" widget="many2one" context="{'parent_department_id_le': parent.department_id}"
                                            options="{'no_quick_create': 1, 'no_create_edit': 1, 'no_open': 1, 'no_create': 1}"/>
-                                    <field name="department_id" readonly="1" force_save="1" options="{'no_quick_create': 1, 'no_create_edit': 1, 'no_open': 1, 'no_create': 1}"
-                                    />
-                                    <field name="cong_them"/>
-                                    <field name="year" readonly="1" force_save="1" required="1"/>
+                                    <field name="department_id" readonly="1" force_save="1"/>
+                                    <field name="muc_huong" readonly="1" force_save="1"/>
                                     <field name="note"/>
                                 </tree>
                             </field>
@@ -96,46 +97,45 @@
             </field>
         </record>
 
-        <record id="datn_cong_tang_cuong_search" model="ir.ui.view">
-            <field name="name">Quản lý công tăng cường</field>
-            <field name="model">datn.cong.tang.cuong</field>
+        <record id="datn_trocap_phucap_search" model="ir.ui.view">
+            <field name="name">Quản lý trợ cấp, phụ cấp</field>
+            <field name="model">datn.trocap.phucap.line</field>
             <field name="arch" type="xml">
                 <search>
-                    <field name="name" filter_domain="['|', ('name','ilike',self), ('ref','ilike',self)]" string="Move"/>
-                    <field name="year"/>
+                    <field name="employee_id"/>
                      <group expand="0" string="Group By">
-                        <filter name="year" string="Năm" domain="[]" context="{'group_by':'year'}"/>
-                        <filter name="department_id" string="Đơn vị/ phòng ban" domain="[]" context="{'group_by':'department_id'}"/>
+                        <filter name="employee_id" string="Nhân viên" domain="[]" context="{'group_by':'employee_id'}"/>
+                        <filter string="Phòng ban" name="department_id" domain="[]" context="{'group_by':'department_id'}"/>
                     </group>
                 </search>
             </field>
         </record>
 
-        <record id="datn_cong_tang_cuong_action" model="ir.actions.act_window">
-            <field name="name">Quản lý công tăng cường</field>
+        <record id="datn_trocap_phucap_action" model="ir.actions.act_window">
+            <field name="name">Quản lý lễ tết</field>
             <field name="type">ir.actions.act_window</field>
-            <field name="res_model">datn.cong.tang.cuong</field>
+            <field name="res_model">datn.trocap.phucap</field>
             <field name="view_mode">tree,form</field>
-            <field name="context">{'view_from_action': 'datn_cong_tang_cuong'}</field>
+            <field name="context">{'search_default_department_id':1,'view_from_action': 'datn_hrm_le_tet'}</field>
             <field name="help" type="html">
                 <p class="oe_view_nocontent_create">
-                    Nhập các tiêu chí để tìm kiếm thông tin Quản lý công tăng cường.
+                    Nhập các tiêu chí để tìm kiếm thông tin Quản lý trợ cấp phụ cấp.
                 </p>
             </field>
         </record>
 
-        <record model="ir.actions.act_window.view" id="datn_cong_tang_cuong_tree_action">
+        <record model="ir.actions.act_window.view" id="datn_trocap_phucap_tree_action">
             <field eval="1" name="sequence"/>
             <field name="view_mode">tree</field>
-            <field name="view_id" ref="datn_cong_tang_cuong_tree"/>
-            <field name="act_window_id" ref="datn_cong_tang_cuong_action"/>
+            <field name="view_id" ref="datn_trocap_phucap_tree"/>
+            <field name="act_window_id" ref="datn_trocap_phucap_action"/>
         </record>
 
-        <record model="ir.actions.act_window.view" id="datn_cong_tang_cuong_form_action">
+        <record model="ir.actions.act_window.view" id="datn_trocap_phucap_form_action">
             <field eval="2" name="sequence"/>
             <field name="view_mode">form</field>
-            <field name="view_id" ref="datn_cong_tang_cuong_form"/>
-            <field name="act_window_id" ref="datn_cong_tang_cuong_action"/>
+            <field name="view_id" ref="datn_trocap_phucap_form"/>
+            <field name="act_window_id" ref="datn_trocap_phucap_action"/>
         </record>
     </data>
 </odoo>
