--- a/hrm_chamcong/views/datn_chamcong.xml
+++ b/hrm_chamcong/views/datn_chamcong.xml
@@ -62,7 +62,6 @@
                             right: 0;
                             top: 0;
                             bottom: 0;
-                            width: 100%;
                             height: 100%;
                             overflow: auto;
                             background-color: rgb(0,0,0);
@@ -102,7 +101,8 @@
                         body.o_web_client {
                             overflow-y: hidden;
                         }
-                    </style>
+                    </style>    width: 100%;
+
                     <group>
                         <field name="name" string="Tên bảng chấm công" readonly="1" force_save="1"/>
                     </group>
